--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Click==7.0
-Flask==1.0.2
-Flask-SQLAlchemy==2.4.0
-itsdangerous==0.24
-Jinja2==2.10.1
-MarkupSafe==1.0
-SQLAlchemy==1.3.5
-Werkzeug==0.15.5
-pymysql
-
+click==7.1.2
+Flask==1.1.2
+Flask-Migrate==2.5.3
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+PyMySQL==0.10.1
+SQLAlchemy==1.3.20
+Werkzeug==1.0.1
